--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <title>login</title>
 </head>
 <body>
-    <!-- <h2>Login</h2>
+    <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
@@ -15,16 +15,16 @@
 
     {% if form.errors %}
         <p style="color: red;">Invalid username or password.</p>
-    {% endif %} -->
+    {% endif %}
 
 
-    <!DOCTYPE html>
+    <!-- <!DOCTYPE html>
 <html>
 <head><title>Login</title></head>
 <body>
   <h1>Login Page Working!</h1>
 </body>
-</html>
+</html> -->
 
 
 </body>
